# tmf-client

./: Cargo.toml  README.md
examples/: create_customer.rs  create_individual.rs  create_organization.rs  create_qualification.rs  create_quote.rs  create_shoppingcart.rs  create_site.rs  get_catalog.rs  get_category.rs  get_customer.rs  get_individual.rs  get_organization.rs  get_product_inventory.rs  get_product_offering.rs  get_product_offering_price.rs  get_product_specification.rs  get_qualification.rs  get_quote.rs  get_resource_inventory.rs  get_service_inventory.rs  get_shoppingcart.rs
src/: lib.rs
src/common/: mod.rs  tmf_error.rs
src/tmf/: mod.rs  tmf620.rs  tmf622.rs  tmf629.rs  tmf632.rs  tmf633.rs  tmf637.rs  tmf638.rs  tmf639.rs  tmf645.rs  tmf648.rs  tmf663.rs  tmf674.rs
