[package]
name = "tmf-client"
version = "0.1.2"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com"]
description = "A Rust client library for TMF conformant APIs"
repository = "https://github.com/rruckley/tmf-client"
license = "Apache-2.0"

[features]
v4 = ["tmflib/build-V4"]
v5 = ["tmflib/build-V5"]
default = ["v4"]

[dependencies]
env_logger = "0.11.6"
reqwest = {version = "0.12.12", features = ["blocking","rustls-tls"]}
serde = "1.0.213"
serde_json = "1.0.132"
tmflib = "0.1.24"
