[package]
name = "tmf-client"
version = "0.1.6"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com"]
description = "A Rust client library for TMF conformant APIs"
repository = "https://github.com/rruckley/tmf-client"
license = "Apache-2.0"

[features]
tmf620 = ["tmflib/tmf620"]
tmf622 = ["tmflib/tmf622"]
tmf629 = ["tmflib/tmf629"]
tmf632 = ["tmflib/tmf632"]
tmf633 = ["tmflib/tmf633"]
tmf645 = ["tmflib/tmf645"]
tmf648 = ["tmflib/tmf648"]
tmf674 = ["tmflib/tmf674"]
v4 = ["tmflib/build-V4"]
v5 = ["tmflib/build-V5"]
default = ["tmf620","tmf622","tmf629","tmf632","tmf633","tmf645","tmf648","tmf674","v4"]

[dependencies]
env_logger = "0.11.6"
reqwest = {version = "0.12.12", features = ["blocking","rustls-tls"]}
serde = "1.0.213"
serde_json = "1.0.138"
tmflib = "0.1.27"
